--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -21,7 +21,7 @@
         <div class="accordion-wrapper">
 
           <!-- ACCORDION SECTION -->
-          <div class="accordion closed">
+          <div class="accordion">
             <div class="accordion-label">
               <i class="fa-bb fas fa-plus fa-fw"></i>
               Problem
@@ -43,20 +43,6 @@
             <div class="accordion-text">
               <div class="accordion-text-inner">
                 <p>{{project.plan}}</p>
-              </div>
-            </div>
-          </div>
-          <!-- x: ACCORDION SECTION -->
-
-          <!-- ACCORDION SECTION -->
-          <div class="accordion closed">
-            <div class="accordion-label">
-              <i class="fa-bb fas fa-plus fa-fw"></i>
-                Responsibilities
-            </div>
-            <div class="accordion-text">
-              <div class="accordion-text-inner">
-                  <p>{{project.responsibilities}}</p>
               </div>
             </div>
           </div>
