tcm is now a past venture

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <div class="resume-item">
+      <div class="resume-item past">
         <h2 class="job-title">UX/UI Developer</h2>
         <div class="job-subTitle">thecampus.market (expired)| 2018 – Present</div>
         <div class="job-description">
