--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,10 +31,13 @@
               <li>Jira</li>
               <li>Airtable</li>
               <li class="partial">React</li>
-              <li>a janky-AF CMS/LMS</li>
+              <li>HTML5 / CSS3</li>
+              <li>Javascript / jQuery</li>
               <li>Git</li>
-              <li>Adobe XD</li>
-              <li>Jquery</li>
+              <li>User Testing</li>
+              <li>Adobe CC</li>
+              <li>Proprietary CMS / LMS</li>
+              <li class="partial">Wordpress</li>
               <li>Good managers and a tight-knit team make an otherwise unfulfilling job, worth sticking with.</li>
               </ul>
             </div>
@@ -43,12 +46,11 @@
 
       <div class="resume-item past">
         <h2 class="job-title">UX/UI Developer</h2>
-        <div class="job-subTitle">thecampus.market (expired)| 2018 – Present</div>
+        <div class="job-subTitle">thecampus.market | 2018 – 2020 (shut-down)</div>
         <div class="job-description">
           My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
           the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and facebook marketplace.
           <div class="tools">
-            Things Learned:
             <ul>
               <li>Angular</li>
               <li>Trello</li>
@@ -68,7 +70,6 @@
           Working solo for clients like Artemis Health, CityGro, PrimeAV and many others. User testing, creating mocks, designing interactions, coding websites and portals, and marketing landing pages, and whatever else I wanted to do instead of
           have a life outside of work.
           <div class="tools">
-            Things Learned:
             <ul>
               <li>HTML/CSS</li>
               <li>Javascript</li>
@@ -88,6 +89,15 @@
           A physical video rental store, like blockbuster, but with 25,000 different movies. Old movies and formats meet new movies and formats, games and TV shows, all together under one roof. This was my first (real/retail) job, I've tried to quit
           three separate times. Two months after each attempt I wind up depressed and back on the schedule. It's a small family operation, technically not <em>my</em> family, but I'd claim them. If you're thinking – no this can't be, redbox killed
           them all, and then netflix robbed their graves – you're wrong. We have survived in large part due to our loyal community, our outstanding customer service, and our always-go-the-extra-mile employees.
+          <div class="tools">
+            <ul>
+              <li class="partial">Wordpress</li>
+              <li>Movie recommendations</li>
+              <li>Small talk</li>
+              <li>Counting back change</li>
+              <li>Customer service</li>
+              </ul>
+            </div>
         </div>
       </div>
 
@@ -96,6 +106,12 @@
         <div class="job-subTitle">Bountiful Clipper | 2007 – 2011</div>
         <div class="job-description">
           This is the job I am most proud of. How many people do you know that stuck with a newspaper delivery job for 4 years? This job taught me the value of hard work, and gave me an undying hatred for printed advertisements.
+          <div class="tools">
+            <ul>
+              <li>Hard Work</li>
+              <li>Speed Walking</li>
+              </ul>
+            </div>
         </div>
       </div>
 
