--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <div class="process row">
+  <div class="process">
     <div class="bg-grid"></div>
     <div class="process-intro container mt-5 mb-5">
       <div class="col-12 col-md-6">
