templated process text on p.details, updated iframe display, resume.

--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,108 +1,116 @@
 <span *ngFor="let project of projects.data">
-<section id="details"  *ngIf="project.path == this.activeProject">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item work-link"><a href="#">Work</a></li>
-      <!-- <li class="breadcrumb-item active" aria-current="page">{{this.activeProject}}</li> -->
-      <li class="breadcrumb-item active" aria-current="page">{{project.name}}</li>
-    </ol>
-  </nav>
-  <div class="intro container">
-    <div class="row flex mt-5 mb-5">
+  <section id="details" *ngIf="project.path == this.activeProject">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item work-link"><a href="#">Work</a></li>
+        <!-- <li class="breadcrumb-item active" aria-current="page">{{this.activeProject}}</li> -->
+        <li class="breadcrumb-item active" aria-current="page">{{project.name}}</li>
+      </ol>
+    </nav>
+    <div class="intro container">
+      <div class="row flex mt-5 mb-5">
 
-      <div class="copy col-10 col-md-6">
-        <h1>{{project.name}}</h1>
-        <!-- <p>
+        <div class="copy col-10 col-md-6">
+          <h1>{{project.name}}</h1>
+          <!-- <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p> -->
-        <p>
-          {{project.description}}
+          <p>
+            {{project.description}}
           </p>
-        <div class="accordion-wrapper">
+          <div class="accordion-wrapper">
 
-          <!-- ACCORDION SECTION -->
-          <div class="accordion">
-            <div class="accordion-label">
-              <i class="fa-bb fas fa-plus fa-fw"></i>
-              Problem
-            </div>
-            <div class="accordion-text">
-              <div class="accordion-text-inner">
-                <p>{{project.problem}}</p>
+            <!-- ACCORDION SECTION -->
+            <div class="accordion">
+              <div class="accordion-label">
+                <i class="fa-bb fas fa-plus fa-fw"></i>
+                Problem
+              </div>
+              <div class="accordion-text">
+                <div class="accordion-text-inner">
+                  <p>{{project.problem}}</p>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- x: ACCORDION SECTION -->
+            <!-- x: ACCORDION SECTION -->
 
-          <!-- ACCORDION SECTION -->
-          <div class="accordion closed">
-            <div class="accordion-label">
-              <i class="fa-bb fas fa-plus fa-fw"></i>
+            <!-- ACCORDION SECTION -->
+            <div class="accordion closed">
+              <div class="accordion-label">
+                <i class="fa-bb fas fa-plus fa-fw"></i>
                 Plan
-            </div>
-            <div class="accordion-text">
-              <div class="accordion-text-inner">
-                <p>{{project.plan}}</p>
+              </div>
+              <div class="accordion-text">
+                <div class="accordion-text-inner">
+                  <p>{{project.plan}}</p>
+                </div>
               </div>
             </div>
+            <!-- x: ACCORDION SECTION -->
+
           </div>
-          <!-- x: ACCORDION SECTION -->
-
+          <a href="{{project.url}}" target="_blank" class="btn btn-primary">Check it out&nbsp;<i class="fas fa-arrow-right"></i></a>
         </div>
-        <a href="{{project.url}}" target="_blank" class="btn btn-primary">Check it out&nbsp;<i class="fas fa-arrow-right"></i></a>
-      </div>
-      <div class="col-0 col-md-6 preview-holder">
-        <!-- <iframe id="iframePreview" [src]="project.url | safe"></iframe> -->
-        <iframe id="iframePreview" [src]="project.url | safe:'resourceUrl' "></iframe>
+        <div class="col-0 col-md-6 d-md-flex d-none preview-holder">
+          <iframe id="iframePreview" class="skewed" [src]="project.url | safe:'resourceUrl' "></iframe>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="process">
-    <div class="bg-grid"></div>
-    <div class="process-intro container mt-5 mb-5">
-      <div class="col-12 col-md-6">
-        <h2>The Process</h2>
-        <p>
-          I want to say that I always start by talking to people with the problem we are trying to solve… but that just isn’t the case. Most of the time, a company is coming to us because we offer tools to solve common problems they are having.
-        </p>
-        <p>
-          We typically start by talking to a brand, about their customers, about their products.
-        </p>
-        <p>
-          Then we talk to users, experts, and haters.
-        </p>
-      </div>
+    <div class="process">
+      <div class="bg-grid"></div>
+      <div class="process-intro container mt-5 mb-5">
+        <div class="col-12 col-md-6 boilerplate" *ngIf="project.type === 'Agency Work'; else elseBlock">
+          <h2>The Process</h2>
+          <p>
+            I want to say that I always start by talking to people with the problem we are trying to solve… but that just isn’t the case. Most of the time, a company is coming to us because we offer tools to solve common problems they are having.
+          </p>
+          <p>
+            We typically start by talking to a brand, about their customers, about their products.
+          </p>
+          <p>
+            Then I talk to users, experts, and haters.
+          </p>
+        </div>
 
-    </div>
-    <div class="brainstorm container mt-5 mb-5">
-      <div class="col-12 col-md-6">
-        <h2>Collaboration</h2>
-        <p>After talking to people, the brand and internal stakeholders, I meet with a small project team, in a brainstorm meeting, where we wireframe, storyboard, and get a loose script for the story we are going to tell, the interactions we are
-          going to build and the information we are going to try to get people to digest and remember. </p>
+        <ng-template #elseBlock>
+          <div class="col-12 col-md-6">
+            <h2>The Process</h2>
+            <p>
+              {{project.process}}
+            </p>
+          </div>
+        </ng-template>
 
-        <p>Deliverables from this meeting are disparate, but as long as we leave with a plan, we have succeeded.</p>
+      </div>
+      <div class="brainstorm container mt-5 mb-5 d-none">
+        <div class="col-12 col-md-6">
+          <h2>Collaboration</h2>
+          <p>After talking to people, the brand and internal stakeholders, I meet with a small project team, in a brainstorm meeting, where we wireframe, storyboard, and get a loose script for the story we are going to tell, the interactions we are
+            going to build and the information we are going to try to get people to digest and remember. </p>
+
+          <p>Deliverables from this meeting are disparate, but as long as we leave with a plan, we have succeeded.</p>
+        </div>
+      </div>
+      <div class="other-projects"></div>
+    </div>
+    <div class="stats d-none">
+      <div class="row flex no-gutters">
+        <h5 class="p-3">Stats, for nerds</h5>
+        <div class="col-12">
+          <ul class="stats-list">
+            <li>Audience: {{project.audience}}</li>
+            <li>Build Time:</li>
+            <li>Engagement:</li>
+            <li>Success:</li>
+            <li>User Tested:</li>
+            <li>New Layout:</li>
+            <li>Cient Satisfaction:</li>
+            <li>Writer: {{project.writer}}</li>
+            <li>Client name: {{project.stakeholder}}</li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="other-projects"></div>
-  </div>
-  <div class="stats d-none">
-    <div class="row flex no-gutters">
-      <h5 class="p-3">Stats, for nerds</h5>
-      <div class="col-12">
-        <ul class="stats-list">
-          <li>Audience: {{project.audience}}</li>
-          <li>Build Time:</li>
-          <li>Engagement:</li>
-          <li>Success:</li>
-          <li>User Tested:</li>
-          <li>New Layout:</li>
-          <li>Cient Satisfaction:</li>
-          <li>Writer: {{project.writer}}</li>
-          <li>Client name: {{project.stakeholder}}</li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
-</section>
+  </section>
 </span>
