updated about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -38,6 +38,7 @@
               <li>Adobe CC</li>
               <li>Proprietary CMS / LMS</li>
               <li class="partial">Wordpress</li>
+              <li class="partial">Figma</li>
               <li>Good managers and a tight-knit team make an otherwise unfulfilling job, worth sticking with.</li>
               </ul>
             </div>
