added contact loop project

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -10,4 +10,16 @@
       </div>
     </div>
   </a>
+
+  <a class="col-6 col-md-2 p-3" [routerLink]="['/contact']">
+    <div class="project-container newProject">
+      <div class="p-header"></div>
+      <div class="p-logo"></div>
+      <div class="p-id">?</div>
+      <div class="text-wrapper">
+        <h3 class="p-title">Your Project</h3>
+        <p class="p-type">I'm available</p>
+      </div>
+    </div>
+  </a>
 </div>
