--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -21,7 +21,7 @@
           <div class="accordion-wrapper">
 
             <!-- ACCORDION SECTION -->
-            <div class="accordion">
+            <div class="accordion" (click)="status=!status" [ngClass]="status ? 'opened' : 'closed'">
               <div class="accordion-label">
                 <i class="fa-bb fas fa-plus fa-fw"></i>
                 Problem
@@ -35,7 +35,7 @@
             <!-- x: ACCORDION SECTION -->
 
             <!-- ACCORDION SECTION -->
-            <div class="accordion closed">
+            <div class="accordion" (click)="status2=!status2" [ngClass]="status2 ? 'opened' : 'closed'">
               <div class="accordion-label">
                 <i class="fa-bb fas fa-plus fa-fw"></i>
                 Plan
