adding the church to my online resume

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -65,6 +65,22 @@
       </div>
 
       <div class="resume-item past">
+        <h2 class="job-title">Web Content Publisher</h2>
+        <div class="job-subTitle">The Church of Jesus Christ of Latter-Day Saints | 2014 – 2015 (Internship)</div>
+        <div class="job-description">
+          I was employed as part of the web content services team, put in charge of publishing web content, managing site layout & design. I even did a little bit of SEO and evaluated page performance using the churches proprietary CMS, and then a little bit of Adobe Experience Manager. In addition to implementing updates and performing maintenance on all of the Family History sub-pages on LDS.org
+          <div class="tools">
+            <ul>
+              <li>HTML/CSS</li>
+              <li>Illustrator</li>
+              <li>ICE (proprietary)</li>
+              <li class="partial">Adobe Experience Manager</li>
+              </ul>
+            </div>
+        </div>
+      </div>
+
+      <div class="resume-item past">
         <h2 class="job-title">Design Consultant</h2>
         <div class="job-subTitle">Various Clients | 2013 – 2018</div>
         <div class="job-description">
