increasing text size on first loaded page

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -2,9 +2,8 @@
   <div class="copy row flex no-gutters" id="welcome">
     <div class="copy-body col-10 col-md-6">
       <h1>Oh, hi. 👋🏻</h1>
-      <p>
-        Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and more clearly communicate my worth as a designer. If you hate it – that's fine – I'll have redesigned it before
-        the new year.
+      <p style="font-size:1.4em;">
+        Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and more clearly communicate my worth as a designer.
       </p>
       <p class="text-primary">
         Keep scrolling to check out some of my neat work.
