working around with some PDF's

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -140,9 +140,9 @@
           TEAMBUILDINGrjlsktPz
           jHwaoiSOCCERtqCfrwIu
           uTqPxqjhLEADERSHIPNa
-          yMgOmrrepoqsoeSprwGp
+          yMgxmrrepoqsoeSprwGp
           lLANGULARrspgrajnyPo
-          fikGrsJAVASCRIPTreOr
+          fiksrsJAVASCRIPTreOr
           wddkvyjrivfzxkjgeiNb
           ugztrPROBLEMSOLVINGv
         </span>
