damnit – text color inconsistency.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ nav.navbar.dark-mode {
 
 body.dark-mode {
   background-color: #232931;
-  color: #eeeeee !important;
+  color: #f7f7f7 !important;
 
   &::selection {
     background: #073642 !important;
