updated work with weave and component library, and some stuff on the about and contact pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,8 +34,9 @@
               <li>HTML5 / CSS3</li>
               <li>Javascript / jQuery</li>
               <li>Git</li>
-              <li>User Testing</li>
-              <li>Adobe CC</li>
+              <li>User Research</li>
+              <li class="partial">Adobe Target</li>
+              <li>Adobe CC (XD, AI, PS, PR)</li>
               <li>Proprietary CMS / LMS</li>
               <li class="partial">Wordpress</li>
               <li class="partial">Figma</li>
@@ -73,7 +74,7 @@
             <ul>
               <li>HTML/CSS</li>
               <li>Illustrator</li>
-              <li>ICE (proprietary)</li>
+              <li>ICE (proprietary CMS)</li>
               <li class="partial">Adobe Experience Manager</li>
               </ul>
             </div>
