--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,15 +4,15 @@
       <h1>I'm available</h1>
       <p>Let me know if you find yourself needing:</p>
       <ul>
-        <li class="text-info">A dog sitter</li>
+        <li>A dog sitter</li>
         <li>Movie recommendations</li>
-        <li class="text-info">UX help</li>
+        <li>UX help</li>
         <li>Pro deals</li>
         <li>A friend</li>
-        <li class="text-info">A website</li>
-        <li class="text-info">A cheap logo</li>
+        <li>A website</li>
+        <li>A cheap logo</li>
         <li>Someone to talk to about Game of Thrones</li>
-        <li class="text-info">UI feedback</li>
+        <li>UI feedback</li>
         <li>Speculative information about the next iPhone</li>
       </ul>
     </div>
