updated with new weave about info, and setup firebase on new pc

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,21 +12,42 @@
         <div class="btn-group">
           <a href="assets/downloads/20-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
           <a href="assets/downloads/20-CL.pdf" download target="_blank" class="btn btn-secondary"><i class="fas fa-file-download"></i>Cover Letter</a>
-          <a href="https://instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-secondary d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
+          <a href="https://instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-secondary d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a>
+        </div>
       </div>
     </div>
   </div>
   <div class="resume row flex no-gutters" id="resume">
     <div class="career-path col-10 col-lg-6 offset-1">
 
-      <div class="resume-item">
+      <div class="resume-item ">
+        <h2 class="job-title">UX/UI Designer</h2>
+        <div class="job-subTitle">Weave | 2020 – Present</div>
+        <div class="job-description">
+
+          <div class="tools">
+            Using these tools:
+            <ul>
+              <li>Asana</li>
+              <li class="partial">Gatsby</li>
+              <li>HTML5 / CSS3</li>
+              <li>Git</li>
+              <li class="partial">Google Analytics</li>
+              <li>Adobe CC (XD, AI, PS, PR)</li>
+              <li>Proprietary CMS / LMS</li>
+              <li class="partial">Headless Wordpress</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="resume-item past">
         <h2 class="job-title">Interactive Experience Designer</h2>
-        <div class="job-subTitle">Expertvoice | 2015 – Present</div>
+        <div class="job-subTitle">Expertvoice | 2015 – 2020</div>
         <div class="job-description">
           Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development (coding) and presentation of web components and digital
           experiences.
           <div class="tools">
-            Things Learned:
             <ul>
               <li>Jira</li>
               <li>Airtable</li>
@@ -41,8 +62,8 @@
               <li class="partial">Wordpress</li>
               <li class="partial">Figma</li>
               <li>Good managers and a tight-knit team make an otherwise unfulfilling job, worth sticking with.</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -51,7 +72,8 @@
         <div class="job-subTitle">thecampus.market | 2018 – 2020 (shut-down)</div>
         <div class="job-description">
           My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
-          the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and facebook marketplace.
+          the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and
+          facebook marketplace.
           <div class="tools">
             <ul>
               <li>Angular</li>
@@ -60,8 +82,8 @@
               <li>Git</li>
               <li>Laughter while working does not make the work any easier</li>
               <li>The answer to Provo's housing crisis is not another hyper-specific, exclusive web-app</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -69,15 +91,16 @@
         <h2 class="job-title">Web Content Publisher</h2>
         <div class="job-subTitle">The Church of Jesus Christ of Latter-Day Saints | 2014 – 2015 (Internship)</div>
         <div class="job-description">
-          I was employed as part of the web content services team, put in charge of publishing web content, managing site layout & design. I even did a little bit of SEO and evaluated page performance using the churches proprietary CMS, and then a little bit of Adobe Experience Manager. In addition to implementing updates and performing maintenance on all of the Family History sub-pages on LDS.org
+          I was employed as part of the web content services team, put in charge of publishing web content, managing site layout & design. I even did a little bit of SEO and evaluated page performance using the churches proprietary CMS, and then a
+          little bit of Adobe Experience Manager. In addition to implementing updates and performing maintenance on all of the Family History sub-pages on LDS.org
           <div class="tools">
             <ul>
               <li>HTML/CSS</li>
               <li>Illustrator</li>
               <li>ICE (proprietary CMS)</li>
               <li class="partial">Adobe Experience Manager</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -95,8 +118,8 @@
               <li>Photoshop</li>
               <li>Illustrator</li>
               <li>When it rains consultant work it pours, and you will burn out fast trying to work for everyone.</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -114,8 +137,8 @@
               <li>Small talk</li>
               <li>Counting back change</li>
               <li>Customer service</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -128,8 +151,8 @@
             <ul>
               <li>Hard Work</li>
               <li>Speed Walking</li>
-              </ul>
-            </div>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -150,7 +173,7 @@
       </div>
       <div class="wordsearch-key">
         <b>ANSWER KEY:</b> HTML, CSS, Javascript, Angular, Jquery, Design, Problem Solving, Teambuilding, Leadership, Soccer, Ping Pong
-        </div>
+      </div>
     </div>
   </div>
 </section>
