updated weave info again

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -33,8 +33,10 @@
               <li>HTML5 / CSS3</li>
               <li>Git</li>
               <li class="partial">Google Analytics</li>
+              <li class="partial">VWO</li>
               <li>Adobe CC (XD, AI, PS, PR)</li>
-              <li>Proprietary CMS / LMS</li>
+              <li class="partial">Headless Wordpress</li>
+              <li class="partial">Tiled</li>
               <li class="partial">Headless Wordpress</li>
             </ul>
           </div>
